gitops/backstage/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage-deployment
  namespace: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      serviceAccountName: backstage
      containers:
      - name: backstage
        command: ["node"]
        args:
        - "packages/backend"
        - "--config"
        - "app-config.yaml"
        image: us.gcr.io/test-app-384114/mayo-backstage:latest
        imagePullPolicy: Always
        ports:
        - name: backstage
          containerPort: 7007
      - name: cloud-sql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.28.0
        command:
          - "/cloud_sql_proxy"
          - "-ip_address_types=PRIVATE"
          - "-log_debug_stdout"
          - "-instances=test-app-384114:us-central1:backstage-database-instance=tcp:5432"
        securityContext:
          runAsNonRoot: true
