gitops/backstage/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/redirect-to-https: true
    # cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  defaultBackend:
    service:
      name: backstage
      port:
        number: 7007
  rules:
  - host: onecloud.igniteme.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backstage
            port:
              number: 7007
